minor naming change

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <input id="dmgOtherPct" step="0.1" type="number" value="0"/>
      </label>
      <label>
-      DMG vs Stunned (%)
+      Stunned DMG Bonus (%)
       <input id="dmgVsStunnedPct" step="0.1" type="number" value="0"/>
      </label>
     </div>
@@ -335,7 +335,7 @@
       <input id="dmgTakenPct" step="0.1" type="number" value="0"/>
      </label>
      <label>
-      DMG Taken while Stunned (%)
+      DMG Taken (Stunned) (%)
       <input id="dmgTakenStunnedPct" step="0.1" type="number" value="0"/>
      </label>
      <label>
