minor spelling changes

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
       <input id="dmgTakenPct" step="0.1" type="number" value="0"/>
      </label>
      <label>
-      DMG Taken (Stunned) (%)
+      Stunned DMG Taken (%)
       <input id="dmgTakenStunnedPct" step="0.1" type="number" value="0"/>
      </label>
      <label>
