--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       Anomaly DMG (%)
       <input id="anomDmgPct" step="0.1" type="number" value="0"/>
      </label>
-     <label>
+     <label class="hidden disorder-ui">
       Disorder DMG (%)
       <input id="disorderDmgPct" step="0.1" type="number" value="0"/>
      </label>
@@ -190,7 +190,7 @@
       <input id="anomTickIntervalSec" min="0" placeholder="Auto" step="0.05" type="number" value=""/>
      </label>
     </div>
-    <div class="form-row cols-3">
+    <div class="form-row cols-3 hidden disorder-ui">
      <label>
       Disorder: Previous Anomaly
       <select id="disorderPrevType">
@@ -214,7 +214,7 @@
        </option>
       </select>
      </label>
-     <label>
+     <label class="disorder-ui">
       Disorder: Time Passed (Sec)
       <input id="disorderTimePassedSec" min="0" step="0.1" type="number" value="0"/>
      </label>
